--- a/EMS/core-bundle/src/Resources/views/components/media_library/template.twig
+++ b/EMS/core-bundle/src/Resources/views/components/media_library/template.twig
@@ -82,17 +82,17 @@
 {%- endblock media_lib_button_upload -%}
 
 {%- block media_lib_breadcrumb -%}
-    {%- if folder is defined -%}
-        <ul class="media-lib-list-breadcrumb">
-            <li><button class="breadcrumb-item">Home</button></li>
-            {%- for parent in folder.parents -%}
+    <ul class="media-lib-list-breadcrumb">
+        <li><button class="breadcrumb-item">Home</button></li>
+        {%- if mediaFolder is defined -%}
+            {%- for parent in mediaFolder.parents -%}
                 <li><button class="breadcrumb-item" data-id="{{- parent.id -}}">{{- parent.name -}}</button></li>
             {%- endfor -%}
             {%- if mediaFile is defined -%}
                 <li><button>{{- mediaFile.file.filename -}}</button></li>
             {%- endif -%}
-        </ul>
-    {%- endif -%}
+        {%- endif -%}
+    </ul>
 {%- endblock media_lib_breadcrumb -%}
 
 {%- block media_lib_modal_title -%}
