--- a/EMS/admin-ui-bundle/assets/css/admin-lte/_cards.scss
+++ b/EMS/admin-ui-bundle/assets/css/admin-lte/_cards.scss
@@ -220,6 +220,9 @@ html.maximized-card {
 
   @if $enable-rounded {
     @include border-top-radius($border-radius);
+    &:first-child {
+      border-radius: inherit;
+    }
   }
 
   .collapsed-card & {
