--- a/EMS/admin-ui-bundle/src/Resources/views/bootstrap5/macros/data-field-type.html.twig
+++ b/EMS/admin-ui-bundle/src/Resources/views/bootstrap5/macros/data-field-type.html.twig
@@ -420,33 +420,37 @@
         {% set values = values|sort((a, b) => a == app.user.localePreferred ? -1 : b == app.user.localePreferred ? 1 : 0) %}
     {% endif %}
 
-    <div class="nav-tabs-custom">
-        <ul class="nav nav-tabs">
-            {% for value in values|default([]) %}
-                <li class="{% if loop.index == 1%}active{% endif %}">
-                    <a href="#item_{{ path|join('_')~'_'~loop.index0 }}__tab" data-bs-toggle="tab" aria-expanded="{% if loop.index == 1%}true{% else %}false{% endif %}">
-                        {{ attribute(choices, value) }}
-                    </a>
-                </li>
-            {% endfor %}
-        </ul>
-        <div class="tab-content">
-            {% for value in values|default([]) %}
-                <div class="tab-pane{% if loop.index == 1%} active{% endif %}" id="item_{{ path|join('_')~'_'~loop.index0 }}__tab">
-                    {% set childData = source[value]|default([]) %}
-                    {% set childCompareData = compareRawData[value]|default([]) %}
-                    {% for grandchild in dataField.getChildren.get(value).getChildren|default([]) %}
-                        {{ _self.renderDataFieldBlock(grandchild, childData, compare, childCompareData, '', path|merge([loop.index0]), locale) }}
-                    {% endfor %}
-                </div>
-            {% endfor %}
-        </div>
+    <div class="card card-{{ theme_color }}">
+        <div class="card-header p-0 border-bottom-0">
+            <ul class="nav nav-tabs" role="tablist">
+                {% for value in values|default([]) %}
+                    <li class="nav-item {% if loop.index == 1%}active{% endif %}">
+                        <a href="#item_{{ path|join('_')~'_'~loop.index0 }}__tab" data-bs-toggle="pill" class="nav-link{% if loop.index == 1%} active{% endif %}" id="{{ path|join('_')~'_'~loop.index0 }}-tab"  data-bs-target="#item_{{ path|join('_')~'_'~loop.index0 }}__tab" role="tab" aria-selected="{% if loop.index == 1%}true{%else%}false{% endif %}">
+            {{ attribute(choices, value) }}
+        </a>
+    </li>
+{% endfor %}
+</ul>
+</div>
+<div class="card-body">
+    <div class="tab-content">
+        {% for value in values|default([]) %}
+            <div class="tab-pane{% if loop.index == 1%} active{% endif %}" id="item_{{ path|join('_')~'_'~loop.index0 }}__tab">
+                {% set childData = source[value]|default([]) %}
+                {% set childCompareData = compareRawData[value]|default([]) %}
+                {% for grandchild in dataField.getChildren.get(value).getChildren|default([]) %}
+                    {{ _self.renderDataFieldBlock(grandchild, childData, compare, childCompareData, '', path|merge([loop.index0]), locale) }}
+                {% endfor %}
+            </div>
+        {% endfor %}
     </div>
+</div>
+</div>
 {% endblock %}
 
 {% block tabsfieldtype_widget_tab_label_per_item %}
-    <li class="{% if counter == 1%}active{% endif %}{% if child.fieldType.displayOptions.class is defined and child.fieldType.displayOptions.class != 'col-md-12' %} {{child.fieldType.displayOptions.class}}{% endif %}">
-        <a href="#item_{{ path|join('_') }}__tab" data-bs-toggle="tab" aria-expanded="false">
+    <li class="nav-item{% if counter == 1%} active{% endif %}{% if child.fieldType.displayOptions.class is defined and child.fieldType.displayOptions.class != 'col-md-12' %} {{child.fieldType.displayOptions.class}}{% endif %}">
+        <a href="#item_{{ path|join('_') }}__tab" data-bs-toggle="pill" class="nav-link{% if counter == 1%} active{% endif %}" id="{{ path|join('_') }}-tab" data-bs-target="#item_{{ path|join('_') }}__tab" role="tab" aria-controls="{{ path|join('_') }}__tab" aria-selected="{% if counter == 1%}true{%else%}false{% endif %}">
             {% if child.fieldType.displayOptions.icon is defined and child.fieldType.displayOptions.icon%}
                 <i class="{{ child.fieldType.displayOptions.icon }}"></i>
             {% endif %}
@@ -457,87 +461,90 @@
 
 
 {% block EMS_CoreBundle_Form_DataField_TabsFieldType %}
-    <div class="nav-tabs-custom">
-        <ul class="nav nav-tabs">
-            {% set counter = 1 %}
-            {% for child in dataField.getChildren|filter(child => not child.fieldType.deleted) %}
-                {% if 'EMS\\CoreBundle\\Form\\DataField\\MultiplexedTabContainerFieldType' == child.fieldType.type|default(null) %}
-                    {% set labels = child.fieldType.displayOptions.labels|default('')|replace({"\r":''})|split('\n') %}
-                    {% set values = child.fieldType.displayOptions.values|default('')|replace({"\r":''})|split('\n')%}
-                    {% set choices = [] %}
-                    {% for value in values %}
-                        {% set choices = choices|merge({(value): attribute(labels, loop.index0)|default(value)}) %}
-                    {% endfor %}
-                    {% if child.fieldType.displayOptions.localePreferredFirst|default(false) and app.user.localePreferred|default(false) and app.user.localePreferred in values %}
-                        {% set values = values|sort((a, b) => a == app.user.localePreferred ? -1 : b == app.user.localePreferred ? 1 : 0) %}
-                    {% endif %}
+    <div class="card card-{{ theme_color }}">
+        <div class="card-header p-0 border-bottom-0">
+            <ul class="nav nav-tabs">
+                {% set counter = 1 %}
+                {% for child in dataField.getChildren|filter(child => not child.fieldType.deleted) %}
+                    {% if 'EMS\\CoreBundle\\Form\\DataField\\MultiplexedTabContainerFieldType' == child.fieldType.type|default(null) %}
+                        {% set labels = child.fieldType.displayOptions.labels|default('')|replace({"\r":''})|split('\n') %}
+                        {% set values = child.fieldType.displayOptions.values|default('')|replace({"\r":''})|split('\n')%}
+                        {% set choices = [] %}
+                        {% for value in values %}
+                            {% set choices = choices|merge({(value): attribute(labels, loop.index0)|default(value)}) %}
+                        {% endfor %}
+                        {% if child.fieldType.displayOptions.localePreferredFirst|default(false) and app.user.localePreferred|default(false) and app.user.localePreferred in values %}
+                            {% set values = values|sort((a, b) => a == app.user.localePreferred ? -1 : b == app.user.localePreferred ? 1 : 0) %}
+                        {% endif %}
 
-                    {% for value in values %}
+                        {% for value in values %}
+                            {% with {
+                                'child': child.getChildren[value],
+                                'counter': counter,
+                                'label': attribute(choices, value),
+                                'path': path|merge([counter]),
+                            }
+                            %}
+                                {{ block('tabsfieldtype_widget_tab_label_per_item') }}
+                            {% endwith %}
+                            {% set counter = counter + 1 %}
+                        {% endfor %}
+                    {% else %}
                         {% with {
-                            'child': child.getChildren[value],
+                            'child': child,
                             'counter': counter,
-                            'label': attribute(choices, value),
+                            'label': child.fieldType.displayOptions.label|default(child.fieldType.name),
                             'path': path|merge([counter]),
                         }
                         %}
                             {{ block('tabsfieldtype_widget_tab_label_per_item') }}
                         {% endwith %}
                         {% set counter = counter + 1 %}
-                    {% endfor %}
-                {% else %}
-                    {% with {
-                        'child': child,
-                        'counter': counter,
-                        'label': child.fieldType.displayOptions.label|default(child.fieldType.name),
-                        'path': path|merge([counter]),
-                    }
-                    %}
-                        {{ block('tabsfieldtype_widget_tab_label_per_item') }}
-                    {% endwith %}
-                    {% set counter = counter + 1 %}
-                {% endif %}
-            {% endfor %}
-        </ul>
-        <div class="tab-content">
-            {% set counter = 1 %}
-            {% for child in dataField.getChildren|filter(child => not child.fieldType.deleted) %}
-                {% if 'EMS\\CoreBundle\\Form\\DataField\\MultiplexedTabContainerFieldType' == child.fieldType.type|default(null) %}
-                    {% for key, item in  child.getChildren %}
+                    {% endif %}
+                {% endfor %}
+            </ul>
+        </div>
+        <div class="card-body">
+            <div class="tab-content">
+                {% set counter = 1 %}
+                {% for child in dataField.getChildren|filter(child => not child.fieldType.deleted) %}
+                    {% if 'EMS\\CoreBundle\\Form\\DataField\\MultiplexedTabContainerFieldType' == child.fieldType.type|default(null) %}
+                        {% for key, item in  child.getChildren %}
+                            {% with {
+                                'child': item,
+                                'counter': counter,
+                            }
+                            %}
+                                <div class="tab-pane fade{% if counter == 1%} active show{% endif %}" id="item_{{ path|join('_')~'_'~counter }}__tab" role="tabpanel" aria-labelledby="{{ path|join('_') }}-tab">
+                                    {% set childData = source[key]|default([]) %}
+                                    {% set childCompareData = compareRawData[key]|default([]) %}
+                                    {% for grandchild in child.getChildren|default([]) %}
+                                        {{ _self.renderDataFieldBlock(grandchild, childData, compare, childCompareData, '', path|merge([counter]), locale) }}
+                                    {% endfor %}
+                                </div>
+                            {% endwith %}
+                            {% set counter = counter + 1 %}
+                        {% endfor %}
+                    {% elseif 'EMS\\CoreBundle\\Form\\DataField\\ContainerFieldType' == child.fieldType.type|default(null) %}
+                        <div class="tab-pane{% if counter == 1%} active{% endif %}" id="item_{{ path|join('_')~'_'~counter }}__tab">
+                            {{ _self.renderDataFieldBlock(child, source, compare, compareRawData, '', [], locale) }}
+                        </div>
+                        {% set counter = counter + 1 %}
+                    {% else %}
                         {% with {
-                            'child': item,
+                            'child': child,
                             'counter': counter,
                         }
                         %}
                             <div class="tab-pane{% if counter == 1%} active{% endif %}" id="item_{{ path|join('_')~'_'~counter }}__tab">
-                                {% set childData = source[key]|default([]) %}
-                                {% set childCompareData = compareRawData[key]|default([]) %}
-                                {% for grandchild in child.getChildren|default([]) %}
-                                    {{ _self.renderDataFieldBlock(grandchild, childData, compare, childCompareData, '', path|merge([counter]), locale) }}
-                                {% endfor %}
+                                {{ _self.renderDataFieldBlock(child, source, compare, compareRawData, '', path|merge([counter]), locale) }}
                             </div>
                         {% endwith %}
                         {% set counter = counter + 1 %}
-                    {% endfor %}
-                {% elseif 'EMS\\CoreBundle\\Form\\DataField\\ContainerFieldType' == child.fieldType.type|default(null) %}
-                    <div class="tab-pane{% if counter == 1%} active{% endif %}" id="item_{{ path|join('_')~'_'~counter }}__tab">
-                        {{ _self.renderDataFieldBlock(child, source, compare, compareRawData, '', [], locale) }}
-                    </div>
-                    {% set counter = counter + 1 %}
-                {% else %}
-                    {% with {
-                        'child': child,
-                        'counter': counter,
-                    }
-                    %}
-                        <div class="tab-pane{% if counter == 1%} active{% endif %}" id="item_{{ path|join('_')~'_'~counter }}__tab">
-                            {{ _self.renderDataFieldBlock(child, source, compare, compareRawData, '', path|merge([counter]), locale) }}
-                        </div>
-                    {% endwith %}
-                    {% set counter = counter + 1 %}
-                {% endif %}
-            {% endfor %}
+                    {% endif %}
+                {% endfor %}
+            </div>
         </div>
-        <!-- /.tab-content -->
     </div>
     {{ _self.messages(dataField) }}
 {% endblock %}
