fix: icon in h3

--- a/EMS/admin-ui-bundle/src/Resources/views/bootstrap5/form/fields.html.twig
+++ b/EMS/admin-ui-bundle/src/Resources/views/bootstrap5/form/fields.html.twig
@@ -215,8 +215,10 @@
 			<div class="col-md-4 match-height">
 				<div class="box box-default">
 					<div class="box-header with-border">
-						<i class="fa fa-eye"></i>
-						<h3 class="box-title">{{- form_label(form.displayOptions) -}}</h3>
+						<h3 class="box-title">
+							<i class="fas fa-eye fa-xs"></i>&nbsp;
+                            {{- form_label(form.displayOptions) -}}
+						</h3>
 					</div>
 					<!-- /.box-header -->
 					<div class="box-body">
@@ -231,8 +233,10 @@
 			<div class="col-md-4 match-height">
 				<div class="box box-default">
 					<div class="box-header with-border">
-						<i class="fa fa-sitemap"></i>
-						<h3 class="box-title">{{- form_label(form.mappingOptions) -}}</h3>
+						<h3 class="box-title">
+							<i class="fas fa-sitemap fa-xs"></i>&nbsp;
+							{{- form_label(form.mappingOptions) -}}
+						</h3>
 					</div>
 					<!-- /.box-header -->
 					<div class="box-body">
@@ -247,8 +251,10 @@
 			<div class="col-md-4 match-height">
 				<div class="box box-default">
 					<div class="box-header with-border">
-						<i class="fa fa-shield"></i>
-						<h3 class="box-title">{{- form_label(form.restrictionOptions) -}}</h3>
+						<h3 class="box-title">
+							<i class="fas fa-shield fa-xs"></i>&nbsp;
+							{{- form_label(form.restrictionOptions) -}}
+						</h3>
 					</div>
 					<!-- /.box-header -->
 					<div class="box-body">
@@ -263,8 +269,10 @@
 			<div class="col-md-4 match-height">
 				<div class="box box-default">
 					<div class="box-header with-border">
-						<i class="fa fa-recycle"></i>
-						<h3 class="box-title">{{- form_label(form.migrationOptions) -}}</h3>
+						<h3 class="box-title">
+							<i class="fas fa-recycle fa-xs"></i>&nbsp;
+							{{- form_label(form.migrationOptions) -}}
+						</h3>
 					</div>
 					<!-- /.box-header -->
 					<div class="box-body">
@@ -279,8 +287,10 @@
 			<div class="col-md-4 match-height">
 				<div class="box box-default">
 					<div class="box-header with-border">
-						<i class="fa fa-plus"></i>
-						<h3 class="box-title">{{- form_label(form.extraOptions) -}}</h3>
+						<h3 class="box-title">
+							<i class="fas fa-plus fa-xs"></i>&nbsp;
+							{{- form_label(form.extraOptions) -}}
+						</h3>
 					</div>
 					<!-- /.box-header -->
 					<div class="box-body">
