--- a/EMS/admin-ui-bundle/src/Resources/views/bootstrap5/base/admin.html.twig
+++ b/EMS/admin-ui-bundle/src/Resources/views/bootstrap5/base/admin.html.twig
@@ -57,6 +57,7 @@
             </div>
 
             {{ include('@EMSAdminUI/bootstrap5/elements/footer.html.twig') }}
+            {{ include('@EMSAdminUI/bootstrap5/elements/control-sidebar.html.twig') }}
         </div>
     {% endapply %}
 
